Print more debug info

--- a/.github/workflows/cmake-build.yml
+++ b/.github/workflows/cmake-build.yml
@@ -59,6 +59,10 @@ jobs:
         run: |
           find ~ -type f -executable -name "*platform.c" 2>/dev/null || true
 
+      - run: |
+          dotnet nuget locals all --list --force-english-output
+          dotnet list package --include-transitive
+
       - name: Build
         run: cmake --build ${{github.workspace}}/build --config ${{ matrix.configuration }}
 
