--- a/.github/workflows/cmake-build.yml
+++ b/.github/workflows/cmake-build.yml
@@ -37,6 +37,8 @@ jobs:
       - name: Display dotnet version
         run: dotnet --version
 
+      - run: dotnet restore
+
       - name: Setup MSVC dev env
         uses: ilammy/msvc-dev-cmd@v1
 
