--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,7 @@ set(
     -p:EmitDnnePlatformSourceCPPToOutDir=${UASSETAPI_DNNE_EMIT_DNNE_PLATFORM_SOURCE_CPP_TO_OUT_DIR}
     -p:CMakeOutDir="${UASSETAPI_DNNE_BINARY_DIR}"
     --output "${UASSETAPI_DNNE_BINARY_DIR}"
+    ${UASSETAPI_DNNE_DOTNET_BUILD_EXTRA_ARGS}
 )
 
 file(
@@ -90,6 +91,7 @@ cmake_print_variables(UASSETAPI_DNNE_BINARY_DIR)
 cmake_print_variables(UASSETAPI_DNNE_EMIT_DNNE_PLATFORM_SOURCE_C_TO_OUT_DIR)
 cmake_print_variables(UASSETAPI_DNNE_EMIT_DNNE_PLATFORM_SOURCE_CPP_TO_OUT_DIR)
 cmake_print_variables(UASSETAPI_DNNE_PROJECT_SOURCES)
+cmake_print_variables(UASSETAPI_DNNE_DOTNET_BUILD_EXTRA_ARGS)
 
 set(
     UASSETAPI_DNNE_C_SOURCES
