--- a/.github/workflows/cmake-build.yml
+++ b/.github/workflows/cmake-build.yml
@@ -58,9 +58,9 @@ jobs:
 
       - name: Configure CMake
         run: |
-          cmake 
-            -B ${{github.workspace}}/build 
-            -DCMAKE_BUILD_TYPE=${{ matrix.configuration }}
+          cmake \ 
+            -B ${{github.workspace}}/build \ 
+            -DCMAKE_BUILD_TYPE=${{ matrix.configuration }} \
             -DUASSETAPI_DNNE_DOTNET_BUILD_EXTRA_ARGS=${{ env.DOTNET_BUILD_EXTRA_ARGS }}
 
       # TODO: remove later.
