--- a/.github/workflows/cmake-build.yml
+++ b/.github/workflows/cmake-build.yml
@@ -57,11 +57,9 @@ jobs:
         run: echo "DOTNET_BUILD_EXTRA_ARGS=--no-restore" >> $env:GITHUB_ENV
 
       - name: Configure CMake
-        run: |
-          cmake \ 
-            -B ${{github.workspace}}/build \ 
-            -DCMAKE_BUILD_TYPE=${{ matrix.configuration }} \
-            -DUASSETAPI_DNNE_DOTNET_BUILD_EXTRA_ARGS=${{ env.DOTNET_BUILD_EXTRA_ARGS }}
+        run: cmake -B ${{github.workspace}}/build
+          -DCMAKE_BUILD_TYPE=${{ matrix.configuration }}
+          -DUASSETAPI_DNNE_DOTNET_BUILD_EXTRA_ARGS=${{ env.DOTNET_BUILD_EXTRA_ARGS }}
 
       # TODO: remove later.
       - if: ${{ matrix.os == 'ubuntu-latest' }}
