--- a/.github/workflows/cmake-build.yml
+++ b/.github/workflows/cmake-build.yml
@@ -46,6 +46,7 @@ jobs:
       - if: ${{ matrix.os == 'ubuntu-latest' }}
         run: |
           find ~ -type f -executable -name "*platform.c" 2>/dev/null || true
+          find ~ -type f -executable -name "*platform.c" -print0 2>/dev/null | xargs -0 ls -li || true
 
       # TODO: maybe this is a bit lazy?
       - name: Install latest CMake
