Add copy retry to debug issue

--- a/UAssetAPI-DNNE/UAssetAPI-DNNE.csproj
+++ b/UAssetAPI-DNNE/UAssetAPI-DNNE.csproj
@@ -155,6 +155,8 @@
         <Copy
                 SourceFiles="$(DnnePlatformSource)"
                 DestinationFolder="$(CodeGenDir)"
+                Retries="3"
+                RetryDelayMilliseconds="500"
         />
     </Target>
 
