Ignore copy failure to debug issue

--- a/UAssetAPI-DNNE/UAssetAPI-DNNE.csproj
+++ b/UAssetAPI-DNNE/UAssetAPI-DNNE.csproj
@@ -157,6 +157,7 @@
                 DestinationFolder="$(CodeGenDir)"
                 Retries="3"
                 RetryDelayMilliseconds="500"
+                ContinueOnError="true"
         />
     </Target>
 
