--- a/.github/workflows/cmake-build.yml
+++ b/.github/workflows/cmake-build.yml
@@ -12,6 +12,9 @@ on:
     branches:
       - "master"
 
+env:
+  DOTNET_BUILD_EXTRA_ARGS: ""
+
 jobs:
   build:
     strategy:
@@ -53,9 +56,6 @@ jobs:
         run: pip install --upgrade cmake
 
       - run: cmake --version
-
-      - if: ${{ matrix.os == 'ubuntu-latest' }}
-        run: echo "DOTNET_BUILD_EXTRA_ARGS=--no-restore" >> $env:GITHUB_ENV
 
       - name: Configure CMake
         run: cmake -B ${{github.workspace}}/build
