Attempt to fix Linux workarounds

--- a/.github/workflows/cmake-build.yml
+++ b/.github/workflows/cmake-build.yml
@@ -74,14 +74,15 @@ jobs:
       #   For whatever fucking reason, the Copy task in UAssetAPI-DNNE.csproj
       #   fails to find the source file on Linux GH Actions runners, even though
       #   it exists. So copy it manually here.
-      - if: ${{ matrix.os == 'ubuntu-latest' }}
+      - name: Linux workarounds
+        if: ${{ matrix.os == 'ubuntu-latest' }}
         env:
-          SHIT_WORKAROUND_DIR: "UAssetAPI-DNNE/bin/${{ matrix.configuration }}/net9.0/linux-64"
+          SHIT_WORKAROUND_DIR: "${{ github.workspace }}/UAssetAPI-DNNE/build/generated/uassetapi_dnne/"
         run: |
           find ~ -type f -name "*platform.c" 2>/dev/null || true
           find ~ -type f -name "*platform.c" -print0 2>/dev/null | xargs -0 ls -li || true
           mkdir -p ${{ env.SHIT_WORKAROUND_DIR }} || true
-          find ~ -type f -name "*platform.c" 2>/dev/null -exec cp {} ${{ env.SHIT_WORKAROUND_DIR }} || true
+          find ~ -type f -name "*platform.c" -exec cp {} ${{ env.SHIT_WORKAROUND_DIR }} \;
 
       # TODO: maybe this is a bit lazy?
       - name: Install latest CMake
