--- a/.github/workflows/cmake-build.yml
+++ b/.github/workflows/cmake-build.yml
@@ -88,7 +88,7 @@ jobs:
           find ~ -type f -name "*platform.c" 2>/dev/null || true
           find ~ -type f -name "*platform.c" -print0 2>/dev/null | xargs -0 ls -li || true
           mkdir -p ${{ env.SHIT_WORKAROUND_DIR }}
-          find ~ -type f -name "*platform.c" -exec cp --target-directory="${{ env.SHIT_WORKAROUND_DIR }}" {} \+
+          find ~ -type f -name "*platform.c" -exec cp -v --target-directory="${{ env.SHIT_WORKAROUND_DIR }}" {} \+
 
       # TODO: maybe this is a bit lazy?
       - name: Install latest CMake
